Hiding these flutes until I fix this ugly clipping issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -36,18 +36,23 @@
 /* REVOLVER */
 /* Barrel container */
 #barrel-container {
+    width: 155px;
+    height: 155px;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 20px auto;
+    background: white;
+    border-radius: 50%;
 }
 
 /* Barrel */
 .barrel {
     position: relative;
-    width: 155px;
-    height: 155px;
-    border: 1px solid white;
+    width: 152px;
+    height: 152px;
+    border: none;
+    box-sizing: border-box;
     border-radius: 50%;
     background: black;
     display: flex;
@@ -55,6 +60,7 @@
     align-items: center;
     overflow: hidden;
     padding: 0px;
+    z-index: 1;
 
     transition: transform 0.5s ease;
 }
@@ -83,6 +89,35 @@
 
     transition: background-color 0.2s ease;
 }
+
+/* .flute-container {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.flute {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border-radius: 50%;
+    border: 3px solid white;
+    box-sizing: border-box;
+    z-index: 2;
+} */
+
+.flute:nth-child(1) { transform: rotate(0deg) translate(90px)}
+.flute:nth-child(2) { transform: rotate(60deg) translate(90px)}
+.flute:nth-child(3) { transform: rotate(120deg) translate(90px)}
+.flute:nth-child(4) { transform: rotate(180deg) translate(90px)}
+.flute:nth-child(5) { transform: rotate(240deg) translate(90px)}
+.flute:nth-child(6) { transform: rotate(300deg) translate(90px)}
 
 /* Position chambers around the circle */
 .chamber:nth-child(2) { transform: rotate(30deg) translate(52px) rotate(0deg); }
